--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -3,7 +3,7 @@ on:
   - push
 jobs:
   build:
-    runs-on: '${{ matrix.os }}'
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
