--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -3,7 +3,7 @@ name: Installing Python
   - push
 jobs:
   build:
-    runs-on: '${{ matrix.os }}'
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os:
@@ -18,4 +18,4 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '${{ matrix.py-version }}'
+          python-version: ${{ matrix.py-version }}
